Completato per bene seconda parte eserczio 72 (mancava qualche tocco di fino con operatori ternari e snellimento codice.